--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "node": "^21.2.0",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
@@ -18,7 +19,7 @@
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
     "rollup": "^4.9.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
