--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
-    "node": "^21.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.2",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.3",
     "rollup": "^4.9.1",
-    "sass": "^1.69.7",
-    "sweetalert2": "^11.10.3"
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
